# mytgbot

./: .env.example  .gitignore  pyproject.toml
bot/: bot.py  config.py  main.py  models.py
